--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^1.1.3",
+    "cheerio": "^0.20.0",
     "gutil": "^1.6.4",
+    "node-dir": "^0.1.12",
     "through2": "^2.0.1",
     "vinyl": "^1.1.1"
   },
