--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "event-stream": "^3.3.2",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
+    "lodash": "^4.14.0",
     "log-symbols": "^1.0.2",
     "mocha": "^2.5.3",
     "should": "^9.0.0"
