--- a/package.json
+++ b/package.json
@@ -25,16 +25,17 @@
     "gutil": "^1.6.4",
     "node-dir": "^0.1.12",
     "through2": "^2.0.1",
-    "vinyl": "^1.1.1"
-  },
-  "devDependencies": {
+    "vinyl": "^1.1.1",
     "chalk": "^1.1.3",
     "event-stream": "^3.3.2",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
+    "gulp-util": "^3.0.7",
     "lodash": "^4.14.0",
     "log-symbols": "^1.0.2",
     "mocha": "^2.5.3",
     "should": "^9.0.0"
+  },
+  "devDependencies": {
   }
 }
