--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-adwords",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Validates banner ads for upload to the AdWords network.",
   "main": "index.js",
   "scripts": {
@@ -26,7 +26,6 @@
     "node-dir": "^0.1.12",
     "through2": "^2.0.1",
     "vinyl": "^1.1.1",
-    "chalk": "^1.1.3",
     "event-stream": "^3.3.2",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
@@ -36,6 +35,5 @@
     "mocha": "^2.5.3",
     "should": "^9.0.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
