--- a/package.json
+++ b/package.json
@@ -22,18 +22,18 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "cheerio": "^0.20.0",
-    "gutil": "^1.6.4",
-    "node-dir": "^0.1.12",
-    "through2": "^2.0.1",
-    "vinyl": "^1.1.1",
     "event-stream": "^3.3.2",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-util": "^3.0.7",
+    "gutil": "^1.6.4",
     "lodash": "^4.14.0",
     "log-symbols": "^1.0.2",
     "mocha": "^2.5.3",
-    "should": "^9.0.0"
+    "node-dir": "^0.1.12",
+    "should": "^9.0.0",
+    "through2": "^2.0.1",
+    "vinyl": "^1.1.1"
   },
   "devDependencies": {}
 }
