Added additional context to errors. Removed verbose option.
Reformatted log output. Now transpiling from es6 via webpack and serving that file.

--- a/package.json
+++ b/package.json
@@ -1,39 +1,54 @@
 {
-  "name": "gulp-adwords",
-  "version": "0.1.0",
-  "description": "Validates banner ads for upload to the AdWords network.",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha"
-  },
-  "keywords": [
-    "gulp",
-    "plugin",
-    "adwords",
-    "validator",
-    "validation",
-    "valid",
-    "ad",
-    "advertisement",
-    "banner"
-  ],
-  "author": "Stephen Poole",
-  "license": "MIT",
-  "dependencies": {
-    "chalk": "^1.1.3",
-    "cheerio": "^0.20.0",
-    "event-stream": "^3.3.2",
-    "gulp": "^3.9.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-util": "^3.0.7",
-    "gutil": "^1.6.4",
-    "lodash": "^4.14.0",
-    "log-symbols": "^1.0.2",
-    "mocha": "^2.5.3",
-    "node-dir": "^0.1.12",
-    "should": "^9.0.0",
-    "through2": "^2.0.1",
-    "vinyl": "^1.1.1"
-  },
-  "devDependencies": {}
+    "name": "gulp-adwords",
+    "version": "0.1.0",
+    "description": "Validates banner ads for upload to the AdWords network.",
+    "main": "index.js",
+    "scripts": {
+        "start": "webpack --mode=production",
+        "dev": "webpack --watch --mode=development",
+        "test": "mocha"
+    },
+    "keywords": [
+        "gulp",
+        "plugin",
+        "adwords",
+        "validator",
+        "validation",
+        "valid",
+        "ad",
+        "advertisement",
+        "banner"
+    ],
+    "author": "Stephen Poole",
+    "license": "MIT",
+    "dependencies": {
+        "@babel/cli": "^7.0.0-beta.50",
+        "@babel/core": "^7.0.0-beta.50",
+        "@babel/plugin-proposal-class-properties": "^7.0.0-beta.50",
+        "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.50",
+        "@babel/polyfill": "^7.0.0-beta.51",
+        "@babel/preset-env": "^7.0.0-beta.50",
+        "@babel/preset-react": "^7.0.0-beta.50",
+        "@babel/preset-stage-0": "^7.0.0-beta.50",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^7.1.5",
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-env": "^1.7.0",
+        "chalk": "^1.1.3",
+        "cheerio": "^0.20.0",
+        "event-stream": "^3.3.2",
+        "gulp": "^3.9.0",
+        "gulp-rename": "^1.2.2",
+        "gulp-util": "^3.0.7",
+        "gutil": "^1.6.4",
+        "lodash": "^4.14.0",
+        "log-symbols": "^1.0.2",
+        "mocha": "^2.5.3",
+        "node-dir": "^0.1.12",
+        "should": "^9.0.0",
+        "through2": "^2.0.1",
+        "vinyl": "^1.1.1",
+        "webpack": "^4.15.1",
+        "webpack-cli": "^3.0.8"
+    }
 }
